--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,12 @@
   <build>
     <finalName>WebApp</finalName>
   </build>
+  <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>3.3.1</version>
+                        <configuration>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                        </configuration>
+</plugin>
 </project>
